# khonsubase

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  dev.md
.github/workflows/: tests.yml
database/: Cargo.toml
database/src/: connection.rs  lib.rs  main.rs  migrations.rs
database/src/migrations/: migration_0001_accounts.rs
database/src/schema/: mod.rs
database/src/schema/accounts/: account.rs  mod.rs  session.rs
database/src/schema/cms/: article.rs  mod.rs
database/src/schema/issues/: issue.rs  issue_relationship.rs  issue_revision.rs  mod.rs  project.rs  tag.rs  tag_group.rs
migrations/: Cargo.toml
migrations/src/: connection.rs  migrations.rs
migrations/src/migrations/: migration_0001_accounts.rs  migration_0002_issues.rs  migration_0003_issue_comments.rs  migration_0004_projects.rs  migration_0005_relations.rs  migration_0006_blocking.rs  migration_0007_blocking_fix.rs  migration_0008_started_at.rs  migration_0009_session_cleanup.rs  migration_0010_tags.rs
server/: Cargo.toml
server/src/: configuration.rs  localization.rs  main.rs  setup.rs  test_helpers.rs  webserver.rs
server/src/configuration/: session_maximum_days.rs  site_default_timezone.rs  site_issue_prefix.rs  site_name.rs  site_primary_locale.rs
server/src/jobs/: mod.rs  session_cleanup.rs
server/src/kbql/: ast.rs  kbql.pest  mod.rs
server/src/setup/: initial_admin_user.rs
server/src/webserver/: articles.rs  auth.rs  issues.rs  localization.rs  projects.rs  users.rs
shared/: Cargo.toml
static/js/: issue_editor.js
strings/en-US/: auth.ftl  common.ftl  issues.ftl  projects.ftl  sign-in.ftl  users.ftl
templates/: base.html.tera  change_password.html.tera  edit_issue.html.tera  edit_project.html.tera  edit_user.html.tera  index.html.tera  issues.html.tera  link_issue.html.tera  list_issues.html.tera  macros.html.tera  markdown.html.tera  new_issue.html.tera  signin.html.tera  view_issue.tera  view_project.html.tera  view_user.html.tera
templates/error/: 404.html.tera
