[package]
name = "database"
version = "0.0.1"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "migrator"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shared = { path = "../shared" }
sqlx-simple-migrator = "0.0.3"
once_cell = "1"
tokio = { version = "0.2", features = ["macros", "blocking", "rt-threaded"] }
dotenv = "0.15"
sqlx = { version = "0.4", default-features = false, features = [
    "macros",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "json",
] }
serde_json = "1"
chrono = "0.4"
futures = "0.3"
uuid = { version = "0.8", features = ["v4", "serde"] }
