[package]
name = "database"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
migrations = { path = "../migrations" }
bcrypt = "0.9"
uuid = { version = "0.8", features = ["v4", "serde"] }
chrono = "0.4"
anyhow = "1"
