[package]
name = "server"
version = "0.0.1"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
database = { path = "../database" }
shared = { path = "../shared" }
rocket = "0.4"
rocket_contrib = "0.4"
dotenv = "0.15"
anyhow = "1"
thiserror = "1"
