[package]
name = "server"
version = "0.0.1"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
workspace = "../"

[dependencies]
database = { path = "../database" }
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", features = [
    "tera_templates"
] }
dotenv = "0.15"
anyhow = "1"
thiserror = "1"
fluent-templates = "0.5"
unic-langid = "0.9"
include_dir = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
passwords = { version = "3.1", features = ["common-password"] }
tokio = { version = "0.2" }
uuid = { version = "0.8", features = ["v4"] }
time-01 = { package = "time", version = "0.1" }
time-02 = { package = "time", version = "0.2" }
comrak = "0.9"
identicon-rs = "2"
percent-encoding = "2"
pest = "2"
pest_derive = "2"